--- a/niak_custom/Dockerfile
+++ b/niak_custom/Dockerfile
@@ -2,5 +2,5 @@ FROM simexp/niak:0.13.0
 MAINTAINER Pierre Bellec <pierre.bellec@criugm.qc.ca>
 
 # Install mricron
-RUN apt-get install mricron
-RUN ipt-get install libcanberra-gtk-module
+RUN apt-get install mricron -y
+RUN apt-get install libcanberra-gtk-module -y
