--- a/ipython/Dockerfile
+++ b/ipython/Dockerfile
@@ -1,6 +1,73 @@
+# Installs Jupyter Notebook and IPython kernel from the current branch
+# Another Docker container should inherit with `FROM jupyter/notebook`
+# to run actual services.
+
+FROM ubuntu:14.04
+
+MAINTAINER yassinebha <yanamarji@gmail.com.com>
+
+# ENV DEBIAN_FRONTEND noninteractive
+
+# Not essential, but wise to set the lang
+# Note: Users with other languages should set this in their derivative image
+RUN apt-get update && apt-get install -y language-pack-en
+ENV LANGUAGE en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LC_ALL en_US.UTF-8
+
+RUN locale-gen en_US.UTF-8
+RUN dpkg-reconfigure locales
+
+# Python binary dependencies, developer tools
+RUN apt-get update && apt-get install -y -q \
+    build-essential \
+    make \
+    gcc \
+    zlib1g-dev \
+    git \
+    python \
+    python-dev \
+    python-pip \
+    python3-dev \
+    python3-pip \
+    python-sphinx \
+    python3-sphinx \
+    libzmq3-dev \
+    sqlite3 \
+    libsqlite3-dev \
+    pandoc \
+    libcurl4-openssl-dev \
+    nodejs \
+    nodejs-legacy \
+    npm
+
+RUN pip2 install --upgrade setuptools pip
+RUN pip3 install --upgrade setuptools pip
+
+RUN mkdir -p /srv/
+WORKDIR /srv/
+RUN git clone --depth 1 https://github.com/ipython/ipykernel /srv/ipykernel
+WORKDIR /srv/ipykernel
+RUN pip2 install -r requirements.txt -e .
+RUN pip3 install -r requirements.txt -e .
+
+ADD . /srv/notebook
+WORKDIR /srv/notebook/
+RUN chmod -R +rX /srv/notebook
+
+RUN pip3 install -r requirements.txt -e .[test]
+
+# install kernels
+RUN python2 -m ipykernel.kernelspec
+RUN python3 -m ipykernel.kernelspec
+
+# WORKDIR /tmp/
+
+# RUN nosetests notebook
+
+
 #------------------------------------------------------------------------------------------------------
 ##########this part is from the image "ipython/notebook" the MAINTAINER is IPython Project <ipython-dev@scipy.org>
-FROM ipython/ipython:3.x
 
 VOLUME /notebooks
 WORKDIR /notebooks
@@ -47,13 +114,11 @@ RUN wget http://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.
 RUN dpkg -i /tmp/minc-toolkit-1.9.3-20140830-Ubuntu_14.04-x86_64.deb
 RUN rm /tmp/minc-toolkit-1.9.3-20140830-Ubuntu_14.04-x86_64.deb
 
-# Update repository list
-RUN apt-get update
+# Install octave
 RUN apt-get install python-software-properties -y
 #RUN add-apt-repository ppa:octave/stable -y
 #RUN apt-get update
 
-# Install octave
 RUN apt-get install -y \
   bison \
   build-essential \
@@ -98,6 +163,7 @@ RUN apt-get install libcanberra-gtk-module -y
 RUN echo more off >> /etc/octave.conf
 RUN echo save_default_options\(\'-7\'\)\; >> /etc/octave.conf
 RUN echo graphics_toolkit gnuplot >> /etc/octave.conf
+
 # Install NIAK
 RUN cd /home/ && wget https://github.com/SIMEXP/niak/archive/v0.13.0.zip && unzip v0.13.0.zip && rm v0.13.0.zip
 RUN mv /home/niak-0.13.0 /home/niak
