--- a/niak_jupyter/Dockerfile
+++ b/niak_jupyter/Dockerfile
@@ -21,6 +21,7 @@ RUN pip3 install ipywidgets
 
 # Nilearn and other packages
 RUN apt-get install sudo
+RUN apt-get install python-dev
 RUN pip3 install --upgrade matplotlib
 RUN pip3 install --upgrade nibabel
 RUN pip3 install --upgrade scipy
